# lax

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml  release-crates.yml  release.yml
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
crates/lax-core/: Cargo.toml  LICENSE
crates/lax-core/src/: flow.rs
crates/lax-css/: Cargo.toml  LICENSE
crates/lax-css/.github/workflows/: ci.yml
crates/lax-css/examples/: format.rs
crates/lax-css/src/: format_text.rs  wasm_plugin.rs
crates/lax-css/src/configuration/: mod.rs
crates/lax-css/src/generation/: mod.rs  parser.rs  printer.rs
crates/lax-css/tests/: corpus_test.rs  test.rs
crates/lax-css/tests/corpus/: NOTICE.md
crates/lax-css/tests/specs/css/: general.txt  ignore_custom_directive.txt  inline.txt
crates/lax-css/tests/specs/scss/: general.txt  multiline_map.txt
crates/lax-markup/: Cargo.toml
crates/lax-markup/src/: format_text.rs  lib.rs  wasm_plugin.rs
crates/lax-markup/src/generation/: parser.rs  printer.rs  tokenizer.rs
crates/lax-markup/tests/: external_test.rs
crates/lax-markup/tests/specs/html/: general.txt
crates/lax-markup/tests/specs/xml/: general.txt
crates/lax-sql/: Cargo.toml  LICENSE  README.md
crates/lax-sql/examples/: format.rs
crates/lax-sql/src/: format_text.rs  wasm_plugin.rs
crates/lax-sql/src/configuration/: mod.rs
crates/lax-sql/src/generation/: keywords.rs  parser.rs  printer.rs  tokenizer.rs
crates/lax-sql/tests/: corpus_test.rs  test.rs
crates/lax-sql/tests/corpus/: NOTICE.md
crates/lax-sql/tests/specs/sql/: expanded.txt  general.txt  keyword_case_lower.txt  sqlformat_issues.txt  wrap.txt
examples/: format.rs  idem.rs
npm/: README.md
npm/lax-css/: README.md  package.json
npm/lax-markup/: README.md  package.json
npm/lax-sql/: README.md  package.json
src/: flow.rs  format_text.rs  lib.rs  text.rs  wasm_plugin.rs
src/configuration/: mod.rs
src/generation/: keywords.rs  mod.rs  parser.rs  printer.rs  tokenizer.rs
tests/: corpus_test.rs  external_test.rs  test.rs
tests/corpus/: NOTICE.md
tests/specs/css/: deno_issues.txt  general.txt  ignore.txt  wrapping.txt
tests/specs/less/: general.txt
tests/specs/scss/: general.txt
tests/specs/sql/: general.txt  keyword_case_upper.txt  sqlformat_issues.txt
