[workspace]
resolver = "2"
members = [
  "crates/lax-core",
  "crates/lax-css",
  "crates/lax-markup",
  "crates/lax-sql",
]

[workspace.dependencies]
anyhow = "1"
dprint-core = { version = "0.67.4", features = ["formatting"] }
lax-core = { version = "0.1.1", path = "crates/lax-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dprint-development = "0.10.2"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"
