[workspace]
resolver = "2"
members = [
  "crates/lax-core",
  "crates/lax-css",
  "crates/lax-markup",
  "crates/lax-sql",
]
# Standalone comparison benchmarks; kept out of the workspace so the extra
# (malva, sqlformat) dependencies never affect the workspace build or CI.
exclude = ["benchmarks"]

[workspace.dependencies]
anyhow = "1"
dprint-core = { version = "0.67.4", features = ["formatting"] }
lax-core = { version = "0.3.0", path = "crates/lax-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dprint-development = "0.10.2"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"
